I think the runinterval was updating every 5 seconds instead of every 5 minutes...fixing!

--- a/puppet.conf
+++ b/puppet.conf
@@ -16,5 +16,5 @@ ssl_client_verify_header = SSL_CLIENT_VERIFY
 
 [agent]
 server=ip-10-0-9-213.us-west-2.compute.internal
-runinterval=5
+runinterval=5m
 
